--- a/step2/Step2_Variational_Classifier.ipynb
+++ b/step2/Step2_Variational_Classifier.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8834eeff-cc7f-4639-9eed-498a48a65552",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "373b08e8-43c1-46f9-8f4b-d83bd35cf960",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "86677551-cf22-4daf-a6c2-abbbe4572058",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f86bbfd4-5ab5-447a-a773-e2c07765df86",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4e9628ab-a630-4aaf-b55a-d20ac74ea0cd",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f05976f2-1e7d-4a33-a8d1-3677ffdfadc8",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "48d2cf65-7ef5-4850-86fa-eb7a31642ed0",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5bc9a6db-d668-47cb-8735-c06cdd2c3cb5",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "bf819599-d7d7-49a8-8aba-201e8d8f5af8",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "cd10421b-9a3a-47c3-9356-63b93171e5f6",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2a280f29-2206-4f33-b04d-045d4c9ff6fa",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f887f193-1c81-439b-a302-c53a6c36c2c6",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "65f81878-c2db-4697-9f23-6e466a42d484",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "72116ca6-69fc-471d-a269-c7d4de968b1d",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "0e46b921-2204-4eaf-bc3b-673b01146afb",
    "metadata": {},
    "outputs": [],
@@ -473,6 +473,7 @@
     "#########################################################\n",
     "# now decomposing the CRYs:\n",
     "# https://quantumcomputing.stackexchange.com/questions/14577/how-to-make-controlled-cry-gates\n",
+    "# see: ./decompose_CRY.png\n",
     "#1: X(0)\n",
     "#1: CNOT(0,1)\n",
     "#1: RY(-beta0/2, 1)\n",
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "daba69cc-5bbb-45be-840b-7f92ed188182",
    "metadata": {},
    "outputs": [
@@ -541,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "52be8df3-fb4c-47dc-8a28-84aa95b33c3a",
    "metadata": {},
    "outputs": [],
@@ -563,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "dc474dd2-312e-4bf9-9423-5e7a16eb85a0",
    "metadata": {},
    "outputs": [],
@@ -576,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "8c42eb0f-941e-4a53-a6ad-115b49646236",
    "metadata": {},
    "outputs": [],
@@ -587,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "d0703a64-b9e2-4bbb-9818-bc638d5357a0",
    "metadata": {},
    "outputs": [],
@@ -609,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "5e078349-ab77-435c-8616-cc5febe18beb",
    "metadata": {},
    "outputs": [
@@ -648,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "98014879-0e8f-4024-a887-4531935d3092",
    "metadata": {},
    "outputs": [
@@ -711,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "bebf543c-5ee7-43b5-bdca-6774fb3a5ee2",
    "metadata": {},
    "outputs": [],
@@ -733,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "ac4a5483-168c-463c-9552-a522f7b0fe89",
    "metadata": {},
    "outputs": [],
@@ -757,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "8709c5fa-0290-4bf8-9d00-aee10d772229",
    "metadata": {},
    "outputs": [],
@@ -769,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "3882d161-bf7b-46d3-a5d7-9e46564e9f93",
    "metadata": {},
    "outputs": [
@@ -848,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "bb058bc4-9bc1-4d10-9efc-b0685fa9e324",
    "metadata": {},
    "outputs": [
